tests/bad_pub_block.stderr
tests/bad_pub_block.sl:4:5: error: expected declaration
