tests/bad_pub_block.sl
pub {
    fn Foo() i32
}
